# Participant-Setting

./: README.md  install_monitoring.sh  install_node_exporter.sh  local.conf  prometheus.yml
server/: .env  .env.example  .gitignore  README.md  app.py  app_backup.py  requirements.txt  start_server.sh
server/config/: settings.py
server/fl_client_templates/: client_app.py  pyproject.toml  server_app.py
server/routes/: fl_routes.py  main_routes.py  vm_routes.py
server/services/: fl_service.py  ssh_service.py
server/static/: app.js  styles.css
server/templates/: index.html
server/utils/: openstack.py
