# =====================================================================
# For a full TOML configuration guide, check the Flower docs:
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "test"
version = "1.0.0"
description = ""
license = "Apache-2.0"
# Dependencies for your Flower App
dependencies = [
    "flwr[simulation]>=1.20.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.7.1",
    "torchvision==0.22.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "Jinhyeok"

# Point to your ClientApp object
# Format: "<module>:<object>"
[tool.flwr.app.components]
clientapp = "client_app:app"
serverapp = "server_app:app"

# Custom config values accessible via `context.run_config`
[tool.flwr.app.config]
local-epochs = 1
input-size = 128
hidden = 64
output-size = 10

# Default federation to use when running the app
[tool.flwr.federations]
default = "remote-federation"

# Remote federation configuration for connecting to SuperLink
[tool.flwr.federations.remote-federation]
address = "localhost:9092"
insecure = true  # Remove this line to enable TLS
# root-certificates = "<PATH/TO/ca.crt>"  # For TLS setup
